# hathor-mcp

./: .mcp.json  Cargo.toml  Dockerfile  README.md
src/: handlers.rs  instructions.md  main.rs  routes.rs  stdio.rs  tools.rs  types.rs
