[package]
name = "hathor-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Hathor Network — connect AI assistants to any Hathor fullnode"
authors = ["Hathor Labs"]
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bip39 = "2.1"
getrandom = "0.2"
